implemented shopify admin and storefront client SDKs. tested creating draft orders and getting draft orders by store ID. Implemented JWT and cookies for storing session data.

--- a/admin/components/Navbar/Navbar.module.css
+++ b/admin/components/Navbar/Navbar.module.css
@@ -10,6 +10,7 @@
   width: rem(240px);
   min-width: rem(240px);
   padding: var(--mantine-spacing-md);
+  padding-left: 0;
   display: flex;
   flex-direction: column;
   border-right: rem(1px) solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
@@ -83,12 +84,12 @@
 
 @media screen and (max-width: 1024px) {
   .navContainer {
-    min-width: rem(100px);
+    min-width: rem(82px);
   }
 
   .navbar {
     min-width: auto;
-    width: rem(84px);
+    width: rem(66px);
   }
 
   .linkIcon {
