--- a/admin/components/Header/Header.module.css
+++ b/admin/components/Header/Header.module.css
@@ -1,8 +1,11 @@
 .header {
+  position: sticky;
+  top: 0;
   height: rem(56px);
   background-color: var(--mantine-color-body);
   border-bottom: rem(1px) solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
   padding: 0 rem(16px);
+  z-index: 10;
 }
 
 .inner {
