added highlight selection css selector to fit theme

--- a/core/app/globals.css
+++ b/core/app/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  ::selection {
+    background: #1B9CA4;
+    color: white;
+  }
+}
+
 @layer utilities {
   .clip-right {
     animation: inset-right 1s ease-in;
