--- a/core/app/globals.css
+++ b/core/app/globals.css
@@ -24,6 +24,20 @@
     }
   }
 
+  .fade-in-fast {
+    animation: 0.5s ease 0.1s normal forwards 1 fade-in-fast;
+    opacity: 0;
+  }
+
+  @keyframes fade-in-fast {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
   .fade-in-ltr {
     animation: fade-in-ltr 1s;
   }
